<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="convert">Convert</string>

    <string-array name="scale">
        <item>@string/celsius</item>
        <item>@string/fahrenheit</item>
        <item>@string/kelvin</item>
    </string-array>

    // input number
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="symbol_period">.</string>
    <string name="number_0">0</string>
</resources>