<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_1"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_2"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_3"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_4"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_5"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_6"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_7"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_8"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_9"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/symbol_period"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/symbol_period" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_0"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"
        android:text="@string/number_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        style="@style/Widget.TemperatureConverter.Button.Circle"
        app:icon="@drawable/ic_backspace_black"
        app:iconTint="?attr/colorOnPrimary"
        app:backgroundTint="?attr/colorPrimary"
        android:layout_width="@dimen/input_button_size"
        android:layout_height="@dimen/input_button_size"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="number_1,number_2,number_3,number_4,number_5,number_6,number_7,number_8,number_9,symbol_period,number_0,button_backspace"
        app:flow_verticalGap="24dp"
        app:flow_horizontalGap="24dp"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>